# APP-WFRC-Commute-Patterns

./: .gitignore  CUSTOM_GEOGRAPHY.md  README.md  index.html  package-lock.json  package.json  pyproject.toml  vite.config.js
.github/workflows/: deploy.yml
data/: city_boundaries.geojson  county_boundaries.geojson  county_flows.parquet  custom_places.geojson  custom_places.gpkg  house_boundaries.geojson  manifest.json  senate_boundaries.geojson
data/2002/: city_flows.parquet  city_meta.json  county_flows.parquet
data/2003/: city_flows.parquet  county_flows.parquet
data/2004/: city_flows.parquet  city_meta.json  county_flows.parquet
data/2005/: city_flows.parquet  city_meta.json  county_flows.parquet
data/2006/: city_flows.parquet  city_meta.json  county_flows.parquet  county_meta.json
data/2007/: city_flows.parquet  county_flows.parquet
data/2008/: city_flows.parquet  city_meta.json  county_flows.parquet
data/2009/: city_flows.parquet  county_flows.parquet
data/2010/: city_flows.parquet  city_meta.json  county_flows.parquet
data/2011/: city_flows.parquet  county_flows.parquet
data/2012/: city_flows.parquet  city_meta.json  county_flows.parquet
data/2013/: city_flows.parquet  county_flows.parquet
data/2014/: city_flows.parquet  county_flows.parquet
data/2015/: city_flows.parquet  county_flows.parquet
data/2016/: city_flows.parquet  city_meta.json  (+1 more)
scripts/: custom_places.py  custom_places_config.json  fetch_acs.py  process_data.py  requirements.txt  screenshot.cjs  verify_custom_places.py
src/: charts.js  db.js  main.js  map.js  sidebar.js
(+176 files in other folders)
